Пример 3 использования оповещения

--- a/bifeEsp32/Оповещение задачи лучше семафора/оповещения задач.md
+++ b/bifeEsp32/Оповещение задачи лучше семафора/оповещения задач.md
@@ -43,12 +43,34 @@
 
 Точно так же, как задача может блокироваться на двоичном семафоре в ожидании, пока этот семафор станет «доступным», задача может блокироваться на уведомлении в ожидании, пока состояние этого уведомления «ожидающее». Точно так же, как задача может блокироваться на счётном семафоре в ожидании, пока счёт этого семафора ненулевой, задача может блокироваться на уведомлении в ожидании, пока значение этого уведомления ненулевое. Первый пример ниже демонстрирует этот сценарий.
 
+### Пример использования уведомления для синхронизации прерывания с задачей
+
+В листинге ниже показано приложение с задачей, которая блокируется на уведомлении. Если бы задача блокировалась на семафоре, она бы вызывала функцию xSemaphoreTake() API, но поскольку задача использует уведомление, она вместо этого вызывает функцию ulTaskNotifyTake() API. Функция ulTaskNotifyTake() всегда использует уведомление с индексом 0. Рекомендуется использовать ulTaskNotifyTakeIndexed() вместо ulTaskNotifyTake(), чтобы использовать уведомление по любому конкретному индексу массива.
+
+#### [1 пример]()
 
 
+### Пример использования уведомления с отправкой значения из задачи в задачу
 
----
 
-Уведомления могут не только сообщать о событиях, но и передавать данные различными способами. Во втором примере ниже показано, как использовать уведомление для отправки 32-битного значения.
+#### [2 пример]()
+
+
+### Пример использования уведомления для отправки значения из ISR в задачу
+
+В следующем примере использование уведомлений выходит за рамки простого повторения поведения семафора и демонстрирует, как отправлять данные с помощью уведомлений. Отправка данных требует минимальных дополнительных затрат.
+
+В листинге показана структура функции, которая возвращает результат аналого-цифрового преобразования (АЦП). Задача, которая вызывает функцию, ожидает результат преобразования в заблокированном состоянии, поэтому она не расходует ресурсы процессора. Результат отправляется ей из подпрограммы обработки прерываний (ISR) в конце преобразования. В этом сценарии необходимо использовать несколько более сложные функции API xTaskNotify() и xTaskNotifyWait(). Как и прежде, xTaskNotify() и xTaskNotifyWait() работают с уведомлением по индексу 0 в массиве уведомлений. Используйте xTaskNotifyIndexed() и xTaskNotifyWaitIndexed() для работы с любым конкретным индексом в массиве.
+
+#### [3 пример]()
+
+### Заключение
+
+FreeRTOS — это устоявшийся продукт, который развивался на протяжении почти двух десятилетий и продолжает развиваться, включая дополнительные функции, адаптированные к наиболее распространённым сценариям использования. Эти функции включают уведомления о задачах, буферы сообщений и потоковые буферы.
+
+Разработчикам следует использовать эти адаптированные функции вместо более старых функций FreeRTOS, потому что они меньше по размеру и работают быстрее, но новые разработчики FreeRTOS часто упускают их из виду, потому что эти концепции не описаны в стандартных текстах по ОС. 
+
+Оригинальные функции FreeRTOS по-прежнему будут всегда доступны для покрытия всех вариантов использования, но в большинстве приложений использование комплексных функций, таких как очереди и семафоры, может быть скорее исключением, чем нормой.
 
 
 
@@ -58,5 +80,7 @@
 
 #### [FreeRTOS direct to task notifications](https://freertos.org/Documentation/02-Kernel/02-Kernel-features/03-Direct-to-task-notifications/01-Task-notifications)
 
-#### [---Типы памяти ESP-IDF ESPRESSIF 5.3.1](https://docs.espressif.com/projects/esp-idf/en/v5.3.1/esp32/api-guides/memory-types.html#memory-layout)
+#### [RTOS Task Notifications](https://freertos.org/Documentation/02-Kernel/04-API-references/05-Direct-to-task-notifications/00-RTOS-task-notifications)
+
+
 
